[gd_scene load_steps=50 format=3 uid="uid://bcp2x46q8pxq3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_10fyh"]
[ext_resource type="Texture2D" uid="uid://bewj7rvnyrxex" path="res://assets/sprites/ninja.png" id="1_s8jh8"]
[ext_resource type="Texture2D" uid="uid://5lcsg14acrte" path="res://assets/sprites/atkmod.png" id="2_2igo2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x1vr3"]
atlas = ExtResource("2_2igo2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1yoc"]
atlas = ExtResource("2_2igo2")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl8yi"]
atlas = ExtResource("2_2igo2")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3ekb"]
atlas = ExtResource("2_2igo2")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bldn2"]
atlas = ExtResource("2_2igo2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8br1a"]
atlas = ExtResource("2_2igo2")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydc51"]
atlas = ExtResource("2_2igo2")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lar6"]
atlas = ExtResource("1_s8jh8")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1m53"]
atlas = ExtResource("1_s8jh8")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb1d5"]
atlas = ExtResource("1_s8jh8")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqikw"]
atlas = ExtResource("1_s8jh8")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tofhb"]
atlas = ExtResource("1_s8jh8")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq5il"]
atlas = ExtResource("1_s8jh8")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kcuv"]
atlas = ExtResource("1_s8jh8")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pxay"]
atlas = ExtResource("1_s8jh8")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjxsf"]
atlas = ExtResource("1_s8jh8")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuosv"]
atlas = ExtResource("1_s8jh8")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cgum"]
atlas = ExtResource("1_s8jh8")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ldy"]
atlas = ExtResource("1_s8jh8")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7kf0"]
atlas = ExtResource("1_s8jh8")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhmww"]
atlas = ExtResource("1_s8jh8")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3n8p"]
atlas = ExtResource("1_s8jh8")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ljxs"]
atlas = ExtResource("1_s8jh8")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6nce"]
atlas = ExtResource("1_s8jh8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqd0h"]
atlas = ExtResource("1_s8jh8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjbmb"]
atlas = ExtResource("1_s8jh8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw3vt"]
atlas = ExtResource("1_s8jh8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d00qi"]
atlas = ExtResource("1_s8jh8")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvwsr"]
atlas = ExtResource("1_s8jh8")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgk1b"]
atlas = ExtResource("1_s8jh8")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy67l"]
atlas = ExtResource("1_s8jh8")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n01ji"]
atlas = ExtResource("1_s8jh8")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6bsw"]
atlas = ExtResource("1_s8jh8")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd1mj"]
atlas = ExtResource("1_s8jh8")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlxfu"]
atlas = ExtResource("1_s8jh8")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgw05"]
atlas = ExtResource("1_s8jh8")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfcsr"]
atlas = ExtResource("1_s8jh8")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jips3"]
atlas = ExtResource("1_s8jh8")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l81pa"]
atlas = ExtResource("1_s8jh8")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgd3p"]
atlas = ExtResource("1_s8jh8")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cha5l"]
atlas = ExtResource("1_s8jh8")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuabo"]
atlas = ExtResource("1_s8jh8")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hugra"]
atlas = ExtResource("1_s8jh8")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2jeq"]
atlas = ExtResource("1_s8jh8")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ham1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1vr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1yoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl8yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3ekb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bldn2")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8br1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydc51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8br1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydc51")
}],
"loop": false,
"name": &"charging_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_2lar6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1m53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb1d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqikw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tofhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq5il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kcuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pxay")
}],
"loop": false,
"name": &"dash_roll",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjxsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuosv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cgum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ldy")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7kf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhmww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3n8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ljxs")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6nce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqd0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjbmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw3vt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d00qi")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvwsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgk1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy67l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n01ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6bsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd1mj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlxfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgw05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfcsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jips3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l81pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgd3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cha5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuabo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hugra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2jeq")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sbjn3"]
radius = 5.0

[node name="player" type="CharacterBody2D" groups=["Player"]]
z_index = 20
collision_layer = 7
collision_mask = 7
script = ExtResource("1_10fyh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_ham1n")
animation = &"charging_attack"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_sbjn3")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="dash_cooldown" type="Timer" parent="."]

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="death_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="attack_timer" type="Timer" parent="."]

[node name="charge_timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="charge_timer" to="." method="_on_charge_timer_timeout"]
